<resources>
    <string name="app_name">梅雨かけいぼ</string>
    <string name="total">合計</string>
    <string name="income">収入</string>
    <string name="expenditure">支出</string>
    <string name="add">追加</string>
    <string name="edit">編集</string>
    <string name="fix">修正</string>
    <string name="delete">削除</string>

    <string name="input">保存</string>
    <string name="positive_button">ＯＫ</string>
    <string name="negative_button">キャンセル</string>
    <string name="back_button">←戻る</string>
    <string name="next_month">来月→</string>
    <string name="last_month">←先月</string>
    <string name="date">日付</string>
    <string name="item">項目</string>
    <string name="amount">金額</string>
    <string name="memo">メモ</string>
    <string name="member">メンバー</string>
    <string name="schedule_name">予定名</string>
    <string name="toast_radio">「支出」「収入」を選択して下さい</string>
    <string name="toast_amount">金額を入力して下さい</string>
    <string name="toast_double">金額は整数で入力して下さい</string>
    <string name="toast_setting_null">未入力のデータがあります</string>
    <string name="toast_setting_past">期限は未来の日付にしてください</string>
    <string name="toast_login_false">IDまたはパスワードが正しくありません</string>
    <string name="dialog_title">確認</string>
    <string name="delete_dialog_msg">このデータを削除します。\nよろしいですか？</string>
    <string name="time_dialog_msg">家計簿のデータを編集します。\nよろしいですか？</string>
    <string name="simulation">シミュレーション</string>
    <string name="Household_account_book">家計簿</string>
    <string name="saving">貯金</string>
    <string name="share">シェア</string>
    <string name="event">イベント</string>
    <string name="create">作成</string>
    <string name="participation">参加</string>
    <string name="target_amount">目標貯金額</string>
    <string name="register_date">目標設定日</string>
    <string name="target_limit">期限</string>
    <string name="month_start">先月の総資産</string>
    <string name="month_amount">今月の貯金額</string>
    <string name="month_end">月末総資産</string>
    <string name="register">登録</string>
    <string name="one_month">今月の目標貯金額</string>
    <string name="setting">設定</string>
    <string name="now_saving">貯金額</string>
    <string name="target_clear">目標貯金額をクリア</string>
    <string name="login">ログイン</string>
    <string name="id">ID</string>
    <string name="password">パスワード</string>

    <string name="event_delete">イベント削除</string>
    <string name="all_delete">家計簿も削除</string>

</resources>