<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/row_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/display_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text = "@string/date"/>

        <TextView
            android:id="@+id/flg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text = "初期値"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/display_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="@string/item"/>

        <TextView
            android:id="@+id/display_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/memo"/>

        <TextView
            android:id="@+id/display_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="0sp"/>

        <TextView
            android:id="@+id/display_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/amount"
            android:textSize="20sp" />



    </LinearLayout>

</LinearLayout>