<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="1">
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/currently">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text = "@string/edit"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/currently_accent"/>

        <TextView
            android:id="@+id/fixDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/part_design"
            android:textSize="25sp"
            android:inputType="none"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <requestFocus/>
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/part_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/item"/>

            <EditText
                android:id="@+id/fixItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:background="#00000000" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/flgIncomeExpenditure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/flgExpenditure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/radio_currently"
                android:textColor="@color/text"
                android:button="@null"
                android:gravity="center"
                android:text="@string/expenditure"/>

            <RadioButton
                android:id="@+id/flgIncome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/radio_currently"
                android:textColor="@color/text"
                android:button="@null"
                android:gravity="center"
                android:text="@string/income"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/part_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/fixAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:gravity="right"
                android:background="#00000000"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:text="円"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/part_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/memo"/>

            <EditText
                android:id="@+id/fixMemo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:background="#00000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_to_look"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:onClick="onBackButtonClick"
                android:text="@string/back_button"/>

            <Button
                android:id="@+id/fixClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/fix"/>

            <Button
                android:id="@+id/deleteClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/delete"/>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/flgTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/flgHouseholdAccountBook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_currently"
                android:textColor="@color/text"
                android:button="@null"
                android:gravity="center"
                android:text="@string/Household_account_book"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/flgSimulation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_future"
                android:textColor="@color/text"
                android:button="@null"
                android:gravity="center"
                android:text="@string/simulation"/>

        </RadioGroup>
    </LinearLayout>
</ScrollView>