<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/row_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="0sp"/>

    <TextView
        android:id="@+id/event_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="0sp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/date"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="@string/member"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/amount"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>