<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/share">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@color/share_accent"
        android:text="@string/event"/>

    <ListView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/create"/>

        <Button
            android:id="@+id/participation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/participation"/>

    </LinearLayout>

</LinearLayout>