<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="1">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/share">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@color/share_accent"
            android:text="@string/login"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/part_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/id"/>

            <EditText
                android:id="@+id/login_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:text=""
                android:inputType="textEmailAddress"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                android:background="#00000000"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/part_design">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="textPassword"
                android:textSize="25sp"
                android:textColor="@color/text"
                android:text=""
                android:background="#00000000"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="16dp"
                android:onClick="onBackButtonClick"
                android:text="@string/back_button"/>


            <Button
                android:id="@+id/loginClick"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/login"/>

            <Button
                android:id="@+id/registerClick"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/register"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>